Change kernel BUG of ssd error in WB mode to ENODEV debian packages version bump

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,13 @@
+enhanceio (1.1-2) unstable; urgency=medium
+
+  * Changed processing SSD error on WB to ENODEV instead of kernel bug
+
+ -- Alexander Anikin <may@a-star.xyz>  Mon, 25 May 2020 20:10:27 +0200
+
 enhanceio (1.1-1) unstable; urgency=medium
 
   * Version 1.1
 
  -- Alexander Anikin <may@a-star.xyz>  Mon, 25 May 2020 20:10:27 +0200
+
 
